<resources>
    <string name="app_name">Pharmacheck</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="catalog">Catalog</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="todo">TODO</string>
    <string name="til">Til</string>
    <string name="rejim">Rejim</string>
    <string name="yordam">Yordam</string>
    <string name="biz_haqimizda">Biz haqimizda</string>
    <string name="o_zbek_tili">O\'zbek tili</string>
    <string name="saqlash">Saqlash</string>
</resources>