<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".fragments.bottom_navigation_fragments.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sozlamalar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <ImageView
        android:id="@+id/settings_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logotipmain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/source_serif_pro_semibold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/settings_logo"
        app:layout_constraintStart_toEndOf="@id/settings_logo"
        app:layout_constraintTop_toTopOf="@id/settings_logo" />

    <ImageView
        android:id="@+id/til_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/til_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/til_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/dm_mono_light"
        android:text="@string/til"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/til_iv"
        app:layout_constraintStart_toEndOf="@id/til_iv"
        app:layout_constraintTop_toTopOf="@id/til_iv" />

    <ImageView
        android:id="@+id/rejim_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rejim_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_iv"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/rejim_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_light"
        android:text="@string/rejim"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/rejim_iv"
        app:layout_constraintStart_toEndOf="@id/rejim_iv"
        app:layout_constraintTop_toTopOf="@id/rejim_iv" />

    <ImageView
        android:id="@+id/call_center_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/call_center_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rejim_iv"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_light"
        android:text="@string/yordam"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/call_center_iv"
        app:layout_constraintStart_toEndOf="@id/call_center_iv"
        app:layout_constraintTop_toTopOf="@id/call_center_iv" />

    <ImageView
        android:id="@+id/about_us_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/about_us_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_center_iv"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/about_us_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_mono_light"
        android:text="@string/biz_haqimizda"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/about_us_iv"
        app:layout_constraintStart_toEndOf="@id/about_us_iv"
        app:layout_constraintTop_toTopOf="@id/about_us_iv" />

</androidx.constraintlayout.widget.ConstraintLayout>